# RimDroid

./: .gitmodules  README.md  gradle.properties  libSDL2-2.0.so.0  libSDL2-2.0.so.0-arm64  settings.gradle.kts
.github/workflows/: build.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  emulation.c  emulation.h  linker.c  logger.h  rimdroid.c  rimdroid.h  rimdroid_globals.h  rimdroid_jni.c  rimdroid_main.c
app/src/main/java/com/rimdroid/: AppStorage.java  AppStorageProvider.java  C.java  GameActivity.java  GameLauncher.java  InstallerService.java  LauncherActivity.java  LauncherPreferences.java  LogcatReader.java  RimDroidApplication.java
app/src/main/java/com/rimdroid/fragments/: LauncherFragment.java  NewInstanceFragment.java  SettingsFragment.java
app/src/main/java/com/rimdroid/game/: GameInstance.java  GameInstanceManager.java
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
app/src/main/res/layout/: activity_launcher.xml  fragment_launcher.xml  fragment_new_instance.xml  fragment_settings.xml
app/src/main/res/menu/: drawer_menu.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
gradle/wrapper/: gradle-wrapper.properties
